--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write --ignore-unknown ."
   },
   "dependencies": {
+    "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
